{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 128,
  "lineage": "aeee5453-a777-6f92-30e9-f69f6c2aff89",
  "resources": [
    {
      "module": "module.infrastructure.module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_create",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e900b10daaf63cdf",
            "arn": "arn:aws:ec2:us-west-1:211125787509:instance/i-0b201b8bc7fe047c8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b201b8bc7fe047c8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "login-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-090029863cc4ba3fe",
            "private_dns": "ip-10-1-10-24.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.10.24",
            "public_ip": "54.193.3.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09f7ffe40cec1b42c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bfee4a890626be7f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3f4f38f0d4439fd",
            "tags": {
              "Name": "tf-server-01"
            },
            "tags_all": {
              "Name": "tf-server-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bfee4a890626be7f"
            ]
          },
          "dependencies": [
            "module.infrastructure.module.ec2.data.aws_ami.my_ami",
            "module.infrastructure.module.vpc.aws_security_group.public_sg",
            "module.infrastructure.module.vpc.aws_subnet.public_subnet",
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available",
            "module.infrastructure.module.vpc.random_integer.random",
            "module.infrastructure.module.vpc.random_shuffle.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e900b10daaf63cdf",
            "arn": "arn:aws:ec2:us-west-1:211125787509:instance/i-0ac1578dfeacafda3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac1578dfeacafda3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "login-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04baa96232ee512c4",
            "private_dns": "ip-10-1-100-189.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.100.189",
            "public_ip": "54.153.115.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f918e264cd710a31",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bfee4a890626be7f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2b8db8f1b1d8f9a",
            "tags": {
              "Name": "tf-server-02"
            },
            "tags_all": {
              "Name": "tf-server-02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bfee4a890626be7f"
            ]
          },
          "dependencies": [
            "module.infrastructure.module.ec2.data.aws_ami.my_ami",
            "module.infrastructure.module.vpc.aws_security_group.public_sg",
            "module.infrastructure.module.vpc.aws_subnet.public_subnet",
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available",
            "module.infrastructure.module.vpc.random_integer.random",
            "module.infrastructure.module.vpc.random_shuffle.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e900b10daaf63cdf",
            "arn": "arn:aws:ec2:us-west-1:211125787509:instance/i-02631ef8b92914d34",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02631ef8b92914d34",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "login-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bd881bfcabcef246",
            "private_dns": "ip-10-1-10-145.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.10.145",
            "public_ip": "52.53.203.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d498243baf927374",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bfee4a890626be7f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3f4f38f0d4439fd",
            "tags": {
              "Name": "tf-server-03"
            },
            "tags_all": {
              "Name": "tf-server-03"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bfee4a890626be7f"
            ]
          },
          "dependencies": [
            "module.infrastructure.module.ec2.data.aws_ami.my_ami",
            "module.infrastructure.module.vpc.aws_security_group.public_sg",
            "module.infrastructure.module.vpc.aws_subnet.public_subnet",
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available",
            "module.infrastructure.module.vpc.random_integer.random",
            "module.infrastructure.module.vpc.random_shuffle.az"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-igw",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125787509:internet-gateway/igw-07ec52bac8111bc08",
            "id": "igw-07ec52bac8111bc08",
            "owner_id": "211125787509",
            "tags": {
              "Name": "terraform-igw"
            },
            "tags_all": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-0a6cab485ce78a9dd"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_routetable",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07ec52bac8111bc08",
            "id": "r-rtb-0e3e65dd8863f6d041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e3e65dd8863f6d04",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.module.vpc.aws_internet_gateway.terraform-igw",
            "module.infrastructure.module.vpc.aws_route_table.terraform_public_rt",
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_private_rt",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125787509:route-table/rtb-0393563f5fb67e733",
            "id": "rtb-0393563f5fb67e733",
            "owner_id": "211125787509",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform_pri_route_table"
            },
            "tags_all": {
              "Name": "terraform_pri_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6cab485ce78a9dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_public_rt",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125787509:route-table/rtb-0e3e65dd8863f6d04",
            "id": "rtb-0e3e65dd8863f6d04",
            "owner_id": "211125787509",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform_pub_route_table"
            },
            "tags_all": {
              "Name": "terraform_pub_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6cab485ce78a9dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_associate",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099efa1fe88df1a8e",
            "route_table_id": "rtb-0393563f5fb67e733",
            "subnet_id": "subnet-03e3b52ec6fcff0f2"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_route_table.terraform_private_rt",
            "module.infrastructure.module.vpc.aws_subnet.private_subnet",
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available",
            "module.infrastructure.module.vpc.random_integer.random",
            "module.infrastructure.module.vpc.random_shuffle.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082b2beaf49cb9d12",
            "route_table_id": "rtb-0393563f5fb67e733",
            "subnet_id": "subnet-00cec91cdf71cd0ff"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_route_table.terraform_private_rt",
            "module.infrastructure.module.vpc.aws_subnet.private_subnet",
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available",
            "module.infrastructure.module.vpc.random_integer.random",
            "module.infrastructure.module.vpc.random_shuffle.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5eb038d0fc563fc",
            "route_table_id": "rtb-0393563f5fb67e733",
            "subnet_id": "subnet-0649404a69015abd3"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_route_table.terraform_private_rt",
            "module.infrastructure.module.vpc.aws_subnet.private_subnet",
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available",
            "module.infrastructure.module.vpc.random_integer.random",
            "module.infrastructure.module.vpc.random_shuffle.az"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_associate",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de22c41c7468b75f",
            "route_table_id": "rtb-0e3e65dd8863f6d04",
            "subnet_id": "subnet-0d3f4f38f0d4439fd"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_route_table.terraform_public_rt",
            "module.infrastructure.module.vpc.aws_subnet.public_subnet",
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available",
            "module.infrastructure.module.vpc.random_integer.random",
            "module.infrastructure.module.vpc.random_shuffle.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb6b7d6ab425b016",
            "route_table_id": "rtb-0e3e65dd8863f6d04",
            "subnet_id": "subnet-0f2b8db8f1b1d8f9a"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_route_table.terraform_public_rt",
            "module.infrastructure.module.vpc.aws_subnet.public_subnet",
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available",
            "module.infrastructure.module.vpc.random_integer.random",
            "module.infrastructure.module.vpc.random_shuffle.az"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125787509:security-group/sg-0bfee4a890626be7f",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0bfee4a890626be7f",
            "ingress": [],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "211125787509",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_sg"
            },
            "tags_all": {
              "Name": "public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6cab485ce78a9dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125787509:subnet/subnet-03e3b52ec6fcff0f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e3b52ec6fcff0f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125787509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-0a6cab485ce78a9dd"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available",
            "module.infrastructure.module.vpc.random_integer.random",
            "module.infrastructure.module.vpc.random_shuffle.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125787509:subnet/subnet-00cec91cdf71cd0ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cec91cdf71cd0ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125787509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2"
            },
            "tags_all": {
              "Name": "private_subnet_2"
            },
            "vpc_id": "vpc-0a6cab485ce78a9dd"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available",
            "module.infrastructure.module.vpc.random_integer.random",
            "module.infrastructure.module.vpc.random_shuffle.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125787509:subnet/subnet-0649404a69015abd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0649404a69015abd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125787509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_3"
            },
            "tags_all": {
              "Name": "private_subnet_3"
            },
            "vpc_id": "vpc-0a6cab485ce78a9dd"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available",
            "module.infrastructure.module.vpc.random_integer.random",
            "module.infrastructure.module.vpc.random_shuffle.az"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125787509:subnet/subnet-0d3f4f38f0d4439fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3f4f38f0d4439fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125787509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-0a6cab485ce78a9dd"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available",
            "module.infrastructure.module.vpc.random_integer.random",
            "module.infrastructure.module.vpc.random_shuffle.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125787509:subnet/subnet-0f2b8db8f1b1d8f9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2b8db8f1b1d8f9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125787509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2"
            },
            "tags_all": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-0a6cab485ce78a9dd"
          },
          "dependencies": [
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.data.aws_availability_zones.available",
            "module.infrastructure.module.vpc.random_integer.random",
            "module.infrastructure.module.vpc.random_shuffle.az"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125787509:vpc/vpc-0a6cab485ce78a9dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e27b2082d7442a14",
            "default_route_table_id": "rtb-020c0c8b53f9ad828",
            "default_security_group_id": "sg-08f751c5c8b6557bf",
            "dhcp_options_id": "dopt-0eae416919b4935f4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6cab485ce78a9dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020c0c8b53f9ad828",
            "owner_id": "211125787509",
            "tags": {
              "Name": "terraform-vpc-86"
            },
            "tags_all": {
              "Name": "terraform-vpc-86"
            }
          },
          "dependencies": [
            "module.infrastructure.module.vpc.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125787509:security-group-rule/sgr-0c608874dc1f79ea7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c608874dc1f79ea7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bfee4a890626be7f",
            "security_group_rule_id": "sgr-0c608874dc1f79ea7",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.module.vpc.aws_security_group.public_sg",
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_db_port",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125787509:security-group-rule/sgr-0141773b4163bda9b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0141773b4163bda9b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bfee4a890626be7f",
            "security_group_rule_id": "sgr-0141773b4163bda9b",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.module.vpc.aws_security_group.public_sg",
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125787509:security-group-rule/sgr-036bc2526baf878ec",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-036bc2526baf878ec",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bfee4a890626be7f",
            "security_group_rule_id": "sgr-036bc2526baf878ec",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.module.vpc.aws_security_group.public_sg",
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_web",
      "provider": "module.infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:211125787509:security-group-rule/sgr-0935073d8b7aa8622",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0935073d8b7aa8622",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bfee4a890626be7f",
            "security_group_rule_id": "sgr-0935073d8b7aa8622",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure.module.vpc.aws_security_group.public_sg",
            "module.infrastructure.module.vpc.aws_vpc.terraform-vpc",
            "module.infrastructure.module.vpc.random_integer.random"
          ]
        }
      ]
    }
  ]
}